# a-share-quant-sim

./: .gitignore  CLAUDE.md  LICENSE  README.md  cmd.py  config.yaml  ic_results_zz800.csv  pyproject.toml  requirements.txt  v68_weight_scan.json  zz800_constituents.csv
archive/: fetch_etf_kline.py  init_full_a_data.py  init_zz1000_data.py  sweep_v42_clipmax.py  sweep_v42_turnover.py  sweep_v44.py
config/: strategy_config.json
core/: __init__.py  account.py  config.py  data.py  db.py  domain_splitter.py  earnings_preview.py  event_factors.py  factors.py  hmm_timing.py  industry_momentum.py  industry_rotation.py  ml.py  ml_factor.py  ml_predictor.py  position.py  scoring.py  strategy.py  strategy_map.py  streak_factor.py
data/: daily  notify_config.example.json  stock_industry_map.json  zz800_constituents.csv
docs/: ARCHITECTURE.md  BACKLOG.md  BARRA_ATTRIBUTION.md  COMPATIBILITY.md  CONFIG_REFERENCE.md  CRON_SETUP.md  DEPLOY.md  HISTORY.md  PROMOTION_PLAN.md  PROMOTION_POSTS.md  RELEASE_NOTES.md  RESEARCH_NEW_FACTORS.md  RESEARCH_SHORT_TERM.md  RESULTS_LOG.md  RISK_PARITY_WF_RESULT.md  ROADMAP_REVIEW.md  STRATEGIES_DISCARDED.md  STRATEGY_REGISTRY.md  TESTING.md  TODO.md  USER_MANUAL.md  architecture.md  backtest-readme.md  ic_decay_latest.json  research-report.md  review-response-20260601.md  review-response.md  sentiment_ic_results.csv
references/: api-notes.md
research/: 短线策略调研-2026-06.md
scripts/: ai_factor_optimizer.py  analyze_bear.py  analyze_pool.py  backtest_rebalance.py  cli.py  constraints.py  cron_monitor.py  data_fetcher.py  data_quality.py  (+101 more)
(+496 files in other folders)
