[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a-share-quant-sim"
version = "0.1.0"
description = "A-share quantitative simulation trading system"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "scripts*", "scripts.tools*", "scripts.strategies*", "scripts.sim*", "scripts.backtest*"]
